--- a/VegWizGroceries/Pages/Index.cshtml
+++ b/VegWizGroceries/Pages/Index.cshtml
@@ -22,7 +22,7 @@
                 <p class="food-item-info">$@String.Format("{0:0.00} / lb", food.Price)</p>
             </div>
             <div class="col-3 pl-1 pr-1 text-center" id="button-col">
-                <a asp-page="/Details" asp-route-name=@System.Web.HttpUtility.UrlPathEncode(food.Name) class="btn text-white">More info</a>
+                <a asp-page="/Details" asp-route-name=@food.Name class="btn text-yellow">More info</a>
             </div>
         </div>
     }
