--- a/VegWizGroceries/Pages/Details.cshtml
+++ b/VegWizGroceries/Pages/Details.cshtml
@@ -41,7 +41,7 @@
 
 <div id="back-button-container" class="text-center">
 <!-- Link back to home page-->
-  <a class="btn text-white">
+  <a asp-page="/Index" class="btn text-white">
   <img style="width: 1.5rem; display: inline;" src="https://content.codecademy.com/courses/asp-dot-net/food_icons/left-arrow.png" />
   Back to home
   </a>
