--- a/VegWizGroceries/Pages/Details.cshtml
+++ b/VegWizGroceries/Pages/Details.cshtml
@@ -6,25 +6,25 @@
 
 <div id="top-container" class="text-center">
   <!-- Display CurrentFood's name -->
-  <h2 class="font-weight-bold"> </h1>
+    <h2 class="font-weight-bold">@Model.CurrentFood.Name</h1>
   <!-- Display CurrentFood's image -->
-  <img id="big-food-icon" >
+        <img id="big-food-icon" src=@Model.CurrentFood.ImageSrc>
   <!-- Display CurrentFood's price -->
-  <p id="display-price" class="font-weight-bold text-left">$@String.Format("{0:0.00} / lb", 0)</p>
+        <p id="display-price" class="font-weight-bold text-left">$@String.Format("{0:0.00} / lb", @Model.CurrentFood.Price)</p>
 </div>
 
 <hr />
 
 <div id="description-container">
   <!-- Display CurrentFood's description -->
-  <p> </p>
+    <p>@Model.CurrentFood.Desc</p>
 </div>
 
 <hr />
 
 <div id="pricing-container" class="d-flex font-weight-bold">
   <!-- Include CurrentFood's price -->
-  <span id="unit-price" class="d-none">0</span>
+  <span id="unit-price" class="d-none">@Model.CurrentFood.Price</span>
 
   <div class="col text-left">
   <label for="quantity">Quantity:</label>
