Adds Quantity on Index page.

--- a/VegWizGroceries/Pages/Index.cshtml
+++ b/VegWizGroceries/Pages/Index.cshtml
@@ -20,6 +20,8 @@
             <div class="col-6 pl-1 pr-1" id="info-col">
                 <p class="food-item-info">@food.Name</p>
                 <p class="food-item-info">$@String.Format("{0:0.00} / lb", food.Price)</p>
+                <input type="number" min="0" id="quantity" value="1" onchange="updateTotal(this, @food.Price)" />
+                <p id="display-price">@food.Price</p>
             </div>
             <div class="col-3 pl-1 pr-1 text-center" id="button-col">
                 <a asp-page="/Details" asp-route-name=@food.Name class="btn text-yellow">More info</a>
@@ -27,5 +29,14 @@
         </div>
     }
 </div>
+
+<script>
+    function updateTotal(element, price) {
+        let quantity = element.value;
+        let total = quantity * price;
+        let displayPriceElement = element.nextElementSibling;
+        displayPriceElement.innerText = `$${total.toFixed(2)}`;
+    }
+</script>
 
 <hr class="mt-2" />
